fix: payment styles and spacing

--- a/src/checkout.css
+++ b/src/checkout.css
@@ -126,7 +126,7 @@
   color: black;
   font-weight: 400;
   margin-top: 40px;
-  padding: 12px 0;
+  padding: 18px 0;
   border: 2px solid black;
   border-radius: 0px;
   font-size: 24px;
